css added, templates modified

--- a/output/team.html
+++ b/output/team.html
@@ -13,26 +13,26 @@
 </head>
 
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid team-all">
         <div class="row">
             <div class="col-12 jumbotron mb-3 team-heading">
                 <h1 class="text-center">My Team</h1>
             </div>
         </div>
     </div>
-    <div class="container">
+    <div class="container team-area-all">
         <div class="row">
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">J</h2>
+        <h2 class="card-title">Karen</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: sdfas@asdfasdf</li>
-            <li class="list-group-item">Email: <a href="mailto:100">100</a></li>
-            <li class="list-group-item">Office number: 1234</li>
+            <li class="list-group-item">ID: 1111</li>
+            <li class="list-group-item">Email: <a href="mailto:karenkool">karenkool</a></li>
+            <li class="list-group-item">Office number: 222</li>
         </ul>
     </div>
 </div>
