--- a/output/team.html
+++ b/output/team.html
@@ -25,14 +25,14 @@
             <div class="team-area col-12 d-flex justify-content-center">
                 <div class="card employee-card">
     <div class="card-header">
-        <h2 class="card-title">Karen</h2>
+        <h2 class="card-title">Kyle</h2>
         <h3 class="card-title"><i class="fas fa-mug-hot mr-2"></i>Manager</h3>
     </div>
     <div class="card-body">
         <ul class="list-group">
-            <li class="list-group-item">ID: 1111</li>
-            <li class="list-group-item">Email: <a href="mailto:karenkool">karenkool</a></li>
-            <li class="list-group-item">Office number: 222</li>
+            <li class="list-group-item">ID: 12</li>
+            <li class="list-group-item">Email: <a href="mailto:kyle@kyle.com">kyle@kyle.com</a></li>
+            <li class="list-group-item">Office number: 1212</li>
         </ul>
     </div>
 </div>
